model almost passing unit tests

--- a/Pre-process Corpus.ipynb
+++ b/Pre-process Corpus.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import opencc; cc = opencc.OpenCC('t2s.json')\n",
+    "\n",
     "from dtl import dtl_mongo; dbi = dtl_mongo.DTLMongo()\n",
     "from sdemb import data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +53,17 @@
     "    \n",
     "    def doc_tokens(self, doc_id):\n",
     "        tokens = []\n",
-    "        for sent in dbi.jtoks.get(articleId=doc_id)['sents']:\n",
+    "        article = dbi.jtoks.get(articleId=doc_id)\n",
+    "        for sent in article['sents']:\n",
     "            tokens += sent\n",
+    "        if article['domain'] in tw_domains:\n",
+    "            tokens = [cc.convert(t) for t in tokens]\n",
     "        return tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bce8ea4af4a4c5a8da755a1b8858924",
+       "model_id": "40a08d7fe27e46fdb0a696a8092599c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17ebaf879b7740eb983aa38d909d73c4",
+       "model_id": "4fff55ee1e3e4cfdbe30421c66e0fa02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d043c31020e4c0b8bb656139eb8728f",
+       "model_id": "4619975c847d47b18c7a1703b0699663",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82b3247543d948df9d8cb3950c9f9f8b",
+       "model_id": "f704cec3c5e74888ac4f7faa2a55fc85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fbefdc1f18c42f19d178601d2c7f05a",
+       "model_id": "1f6eed00209d48b09b596cdc9651e2ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eca2b92c668c4883b015eb1b78e4bc79",
+       "model_id": "641f7d0e79174b11bfe852cac905daae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +197,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9fda85a83614f4a8a1ceb638f7ae372",
+       "model_id": "5843947e939d492d9ae734c2bf5d1f41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6eeb7c5b1404307bc33e8a7dd79ef0f",
+       "model_id": "e1a6ada78ed24db2b02093ac30578117",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +239,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8826d2bfd7b479a9603c6c09c1f48ed",
+       "model_id": "d06d3710216e46ed938668eaa82c8d70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5736aa29917e49a59da881ac60b5e90d",
+       "model_id": "f033360883ea42ed9f0a72c22b4ecd0d",
        "version_major": 2,
        "version_minor": 0
       },
